@@ -1,3 +1,5 @@
+2006/7/29 -- released version 20060729_trunk
+
 2006/7/28 -- released version 20060728_trunk
 
 2006/7/27 -- released version 20060727_trunk
